--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Version 1.0.49 :
 - Slightly increased Bombs explosion radius
 - Decreased Mega Bombs explosion radius
 - Bombs and Mega Bombs are now correctly affected by the momentum of moving solids entities
+- Fixed Loenn plugin for Drone Switchs side attribute having a "Bottom" option instead of "Down", preventing placing switches on the ceiling
 - Slopes should no longer prevent the player from falling after throwing the Remote Drone
 - Slopes should no longer create collisions issues with nearby solids entities
 - Slopes will now try to move the player out of them if the player manage to get stuck into them
