feature: Added Flag Block

--- a/Ahorn/lang/en_gb.lang
+++ b/Ahorn/lang/en_gb.lang
@@ -191,6 +191,12 @@ placements.entities.XaphanHelper/Elevator.tooltips.flag=The flag that must be se
 # EtherealBlock
 placements.entities.XaphanHelper/EtherealBlock.tooltips.tiletype=Change the visual apparence of the block.
 
+# FlagBlock
+placements.entities.XaphanHelper/FlagBlock.tooltips.tiletype=Change the visual apparence of the block.
+placements.entities.XaphanHelper/FlagBlock.tooltips.mode=Block: The break block will not try to merge with nearby solid tiles.\nWall: The break block will try to merge with nearby solid tiles.
+placements.entities.XaphanHelper/FlagBlock.tooltips.flags=If any of these flags are set, the block will not appear, or will break if it already appeared. Flags must be separated by a comma (,).
+placements.entities.XaphanHelper/FlagBlock.tooltips.permanent=If true, the block will not reapear if the player die or re-enter the room.
+
 # FlagDashSwitch
 placements.entities.XaphanHelper/FlagDashSwitch.tooltips.side=The side the switch will face.
 placements.entities.XaphanHelper/FlagDashSwitch.tooltips.persistent=Once turned one, it will stay activated even if the player die. (No effect if Can Swap Flag is true)
