--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -213,6 +213,13 @@ entities.XaphanHelper/ElevatorBarrier.placements.name.ElevatorBarrier=Elevator B
 entities.XaphanHelper/EtherealBlock.placements.name.EtherealBlock=Ethereal Block
 entities.XaphanHelper/EtherealBlock.attributes.description.tiletype=Change the visual apparence of the block.
 
+# FlagBlock
+entities.XaphanHelper/FlagBlock.placements.name.FlagBlock=Flag Block
+entities.XaphanHelper/FlagBlock.attributes.description.tiletype=Change the visual apparence of the block.
+entities.XaphanHelper/FlagBlock.attributes.description.mode=Block: The break block will not try to merge with nearby solid tiles.\nWall: The break block will try to merge with nearby solid tiles.
+entities.XaphanHelper/FlagBlock.attributes.description.flags=If any of these flags are set, the block will not appear, or will break if it already appeared. Flags must be separated by a comma (,).
+entities.XaphanHelper/FlagBlock.attributes.description.permanent=If true, the block will not reapear if the player die or re-enter the room.
+
 # FlagDashSwitch
 entities.XaphanHelper/FlagDashSwitch.placements.name.FlagDashSwitch=Flag Dash Switch
 entities.XaphanHelper/FlagDashSwitch.attributes.description.side=The side the switch will face.
