--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Version 1.0.49 :
 
+- Added Flag Block
 - Added "Remove Flags" attribute to Liquids.
 - Reduced fire rate of the Remote Drone
 - Multiple Lasers Detectors in the same room affecting the same flag will now set the flag to true if at least one of them detect a laser
