--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,13 @@
 Version 1.0.49 :
 
 - Added Flag Block
-- Added "Remove Flags" attribute to Liquids.
+- Added Custom Coverup Wall
+- Added Custom Dash Block
+- Added "Remove Flags" attribute to Liquids
+- Added "Mode", "Flag" and "Flag Tiletype" attributes to Custom Exit Blocks
+- Renamed Linked Fake Walls to Custom Fake Walls
+- Added "Group", "Flag" and "Flag Tiletype" attributes to Custom Fake Walls
+- Added "Flag", "Flag Custom Directory" and "Flag texture' to Slopes
 - Reduced fire rate of the Remote Drone
 - Multiple Lasers Detectors in the same room affecting the same flag will now set the flag to true if at least one of them detect a laser
 - Slightly increased Bombs explosion radius
