--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@ Version 1.0.49 :
 - Warps registered in the player Save data that no longer exist are now automatically removed from the player Save data
 - Bombs and Mega Bombs are now correctly affected by the momentum of moving solids entities
 - The player can no longer grab a Magnetic Ceiling while they are dashing
+- Countdown timers will now pause if the player die, until it fully respawned and during screen transitions
 - Fixed Loenn plugin for Drone Switchs side attribute having a "Bottom" option instead of "Down", preventing placing switches on the ceiling
 - Slopes should no longer prevent the player from falling after throwing the Remote Drone
 - Slopes should no longer create collisions issues with nearby solids entities
