--- a/changelog.txt
+++ b/changelog.txt
@@ -4,11 +4,11 @@ Version 1.0.49 :
 - Added Custom Coverup Wall
 - Added Custom Dash Block
 - Renamed Linked Fake Walls to Custom Fake Walls
-- Added "Remove Flags" attribute to Liquids
+- Added "Remove Flags" and "Upside Down" attributes to Liquids
 - Added "Mode", "Flag" and "Flag Tiletype" attributes to Custom Exit Blocks
-- Added "Upside Down" attribute to Liquids
 - Added "Group", "Flag" and "Flag Tiletype" attributes to Custom Fake Walls
 - Added "Flag", "Flag Custom Directory" and "Flag texture' to Slopes
+- Added "Can Respawn" attribute to Custom Collectables
 - Reduced fire rate of the Remote Drone
 - Multiple Lasers Detectors in the same room affecting the same flag will now set the flag to true if at least one of them detect a laser
 - Slightly increased Bombs explosion radius
@@ -17,7 +17,9 @@ Version 1.0.49 :
 - Warps registered in the player Save data that no longer exist are now automatically removed from the player Save data
 - Bombs and Mega Bombs are now correctly affected by the momentum of moving solids entities
 - The player can no longer grab a Magnetic Ceiling while they are dashing
-- Countdown timers will now pause if the player die, until it fully respawned and during screen transitions
+- Countdown Displays timer will now pause if the player die, until it fully respawned and during screen transitions
+- Countdown Display timer is now draw closer to the top of the screen
+- Updated sprites for Countdown Displays timers explosions
 - Fixed Loenn plugin for Drone Switchs side attribute having a "Bottom" option instead of "Down", preventing placing switches on the ceiling
 - Slopes should no longer prevent the player from falling after throwing the Remote Drone
 - Slopes should no longer create collisions issues with nearby solids entities
