--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,8 @@ Version 1.0.49 :
 - Countdown Displays timer will now pause if the player die, until it fully respawned and during screen transitions
 - Countdown Display timer is now draw closer to the top of the screen
 - Updated sprites for Countdown Displays timers explosions
+- Dying when the Remote Drone ability now send the drone back to the last checkpoint instead of giving back the control to Madeline.
+- Reduced the time the Grab button must be hold to destroy the Remote Drone from 1.5 seconds to 0.5 seconds. This can now only be done if the Remote Drone is on safe ground and is not moving.
 - Fixed Loenn plugin for Drone Switchs side attribute having a "Bottom" option instead of "Down", preventing placing switches on the ceiling
 - Liquids will no longer remove themselves if their surface is starting from bellow the room while being set to rise. Draining liquids will still remove themsleves
 - Slopes should no longer prevent the player from falling after throwing the Remote Drone
