--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ Version 1.0.49 :
 - Multiple Lasers Detectors in the same room affecting the same flag will now set the flag to true if at least one of them detect a laser
 - Slightly increased Bombs explosion radius
 - Decreased Mega Bombs explosion radius
+- Increased Drone Switches hitbox
 - Bombs, Mega Bombs and Remote Drone abilities will now be used when the player land on the ground if the "Use Bag Item Slot" button is hold while the player is not on the ground yet
 - Warps registered in the player Save data that no longer exist are now automatically removed from the player Save data
 - Bombs and Mega Bombs are now correctly affected by the momentum of moving solids entities
@@ -22,6 +23,7 @@ Version 1.0.49 :
 - Countdown Displays timer will now pause if the player die, until it fully respawned and during screen transitions
 - Countdown Display timer is now draw closer to the top of the screen
 - Updated sprites for Countdown Displays timers explosions
+- Updated sprites of Drone Switches
 - Dying when the Remote Drone ability now send the drone back to the last checkpoint instead of giving back the control to Madeline
 - Drone Switches now reset their flag when the drone respawn if they are not set to be permanent, unless the drone is destroyed on purpose
 - Drone Switches now register the current state of their flag when the drone activate a Custom Checkpoint or a Change Respawn Trigger and will use this updated state when the drone respawn
