doc: Slopes loenn plugin Tooltips

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -485,7 +485,9 @@ entities.XaphanHelper/Slope.attributes.description.slopeHeight=Height od the slo
 entities.XaphanHelper/Slope.attributes.description.tilesTop=Tile pattern at the top of the slope. Use this to 'connect' the slope to nearby solid tiles.
 entities.XaphanHelper/Slope.attributes.description.tilesBottom=Tile pattern at the bottom of the slope. Use this to 'connect' the slope to nearby solid tiles.
 entities.XaphanHelper/Slope.attributes.description.customDirectory=Leave the default value or empty if using vanilla textures. Specify the directory your custom texture is located at here, relative to Atlases/Gameplay/.
+entities.XaphanHelper/Slope.attributes.description.flagCustomDirectory=Same as the Custom Directory field. Used instead if the flag is set.
 entities.XaphanHelper/Slope.attributes.description.texture=Texture of the slope. Type your custom texture name here if you have set a custom directory.
+entities.XaphanHelper/Slope.attributes.description.flagTexture=Same as the Texture field. Used instead if the flag is set.
 entities.XaphanHelper/Slope.attributes.description.canSlide=If true, the player can slide on the slope by holding down on it.
 entities.XaphanHelper/Slope.attributes.description.upsideDown=Flip the slope so that it can be used on ceilings instead of the ground.
 entities.XaphanHelper/Slope.attributes.description.noRender=If true, the slope will be invisible.
