--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 Version 1.0.50 :
+- Added "Level Set" attribute to Collectable Doors
 - Move Blocks now collide correctly with Slopes
 - Warps Stations will no longer display a Wipe Screen when the player interact with them if the chapter doses not use the In-Game map
 - Fixed a bug allowing the teleport sequence to be triggered multiple times if the player was selecting a destination from the Warp Station menu multiple times in a row
