fix: Custom Collectable can spawn with no flag set

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -126,7 +126,7 @@ entities.XaphanHelper/CustomCollectable.attributes.description.sprite=The full p
 entities.XaphanHelper/CustomCollectable.attributes.description.collectSound=Sound event that play when the player collect this collectable.
 entities.XaphanHelper/CustomCollectable.attributes.description.changeMusic=If true, the current music will stop while the collectSound play when the collectable has been collected.
 entities.XaphanHelper/CustomCollectable.attributes.description.newMusic=Only if changeMusic is set.\nThe music event that play after the collectable has been collected. Leave blank to use the same music as the one that played before the collectable was collected.
-entities.XaphanHelper/CustomCollectable.attributes.description.flag=The flag that will be set once the player collect the collectable.\nIf empty, the collectable will not spawn.
+entities.XaphanHelper/CustomCollectable.attributes.description.flag=The flag that will be set once the player collect the collectable.
 entities.XaphanHelper/CustomCollectable.attributes.description.mapIcon=Name of the sprite that will be displayed on the In-game map.\nMust be in Atlases/Gui/maps/(yourname)/(yourcampaignname)/.
 entities.XaphanHelper/CustomCollectable.attributes.description.mustDash=If true, the player must dash to collect the collectable.
 entities.XaphanHelper/CustomCollectable.attributes.description.collectGoldenStrawberry=If true, the golden strawberry will collect when the player collect the collectable.
