fix: Cell Lock Keep Cell attribute

--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -59,9 +59,9 @@ entities.XaphanHelper/CellLock.attributes.description.flag=The flag to set once 
 entities.XaphanHelper/CellLock.attributes.description.registerInSaveData=If true, the flag will be registered in the player Save file and will be set forever.
 entities.XaphanHelper/CellLock.attributes.description.sound=The sound event that play when the player activate the lock.
 entities.XaphanHelper/CellLock.attributes.description.cellInside=If true, the lock will already have a Cell slotted in it and just need to be activated.
-entities.XaphanHelper/CellLock.attributes.description.keepCell=If true, the Cell will stay inside the lock even after leaving the room and the corresponding Cell will no longer spawn.
+entities.XaphanHelper/CellLock.attributes.description.keepCell=If true, the Cell will stay inside the lock even after the player die or leave the room and the corresponding Cell will no longer spawn.
 entities.XaphanHelper/CellLock.attributes.description.slotSound=The sound event that play when the player place a Cell into the lock.
-entities.XaphanHelper/CellLock.attributes.description.instant=If true, the flag will be set as soon as a cell is sloted without requireing the player to interact first.
+entities.XaphanHelper/CellLock.attributes.description.instant=If true, the flag will be set as soon as a cell is sloted without requiring the player to interact first.
 entities.XaphanHelper/CellLock.attributes.description.type=Determine the sprite that will be used from the directory set in the Sprite field. Aviable types : "Normal", "Floating".
 
 # CollectableDoor
